--- a/simplernn.ipynb
+++ b/simplernn.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\agraw\\OneDrive\\Desktop\\Review_Analysis\\venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +284,7 @@
        " 1)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1327,7 @@
        " ...}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1351,7 @@
        "\"? this film was just brilliant casting location scenery story direction everyone's really suited the part they played and you could just imagine being there robert ? is an amazing actor and now the same being director ? father came from the same scottish island as myself so i loved the fact there was a real connection with this film the witty remarks throughout the film were great it was just brilliant so much that i bought the film as soon as it was released for ? and would recommend it to everyone to watch and the fly fishing was amazing really cried at the end it was so sad and you know what they say if you cry at a film it must have been good and this definitely was also ? to the two little boy's that played the ? of norman and paul they were just brilliant children are often left out of the ? list i think because the stars that play them all grown up are such a big profile for the whole film but these children are amazing and should be praised for what they have done don't you think the whole story was so lovely because it was true and was someone's life after all that was shared with us all\""
       ]
      },
-     "execution_count": 68,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1354,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1378,7 @@
        "       [   0,    0,    0, ...,  204,  131,    9]])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1386,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1449,7 @@
        "         16, 5345,   19,  178,   32])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,9 +1460,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\agraw\\OneDrive\\Desktop\\Review_Analysis\\venv\\Lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "## Train Simple RNN\n",
     "model=Sequential()\n",
@@ -1464,22 +1482,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_4\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " embedding_4 (Embedding)     (None, 500, 128)          1280000   \n",
+      " embedding (Embedding)       (None, 500, 128)          1280000   \n",
       "                                                                 \n",
-      " simple_rnn_4 (SimpleRNN)    (None, 128)               32896     \n",
+      " simple_rnn (SimpleRNN)      (None, 128)               32896     \n",
       "                                                                 \n",
-      " dense_4 (Dense)             (None, 1)                 129       \n",
+      " dense (Dense)               (None, 1)                 129       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 1313025 (5.01 MB)\n",
@@ -1495,25 +1513,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\agraw\\OneDrive\\Desktop\\Review_Analysis\\venv\\Lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "model.compile(optimizer='adam',loss='binary_crossentropy',metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.EarlyStopping at 0x2140c3d6850>"
+       "<keras.src.callbacks.EarlyStopping at 0x2acb6386390>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1535,25 +1562,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "625/625 [==============================] - 36s 56ms/step - loss: 7526.9800 - accuracy: 0.6464 - val_loss: 0.5206 - val_accuracy: 0.7654\n",
+      "625/625 [==============================] - 34s 55ms/step - loss: 0.0582 - accuracy: 0.9798 - val_loss: 0.7454 - val_accuracy: 0.8158\n",
       "Epoch 2/10\n",
-      "625/625 [==============================] - 35s 56ms/step - loss: 0.4637 - accuracy: 0.8002 - val_loss: 0.4208 - val_accuracy: 0.8212\n",
+      "625/625 [==============================] - 35s 56ms/step - loss: 0.0641 - accuracy: 0.9779 - val_loss: 0.7540 - val_accuracy: 0.8288\n",
       "Epoch 3/10\n",
-      "625/625 [==============================] - 35s 57ms/step - loss: 0.3191 - accuracy: 0.8676 - val_loss: 0.3793 - val_accuracy: 0.8348\n",
+      "625/625 [==============================] - 35s 57ms/step - loss: 0.0575 - accuracy: 0.9794 - val_loss: 0.7914 - val_accuracy: 0.8350\n",
       "Epoch 4/10\n",
-      "625/625 [==============================] - 36s 57ms/step - loss: 0.2242 - accuracy: 0.9125 - val_loss: 0.3758 - val_accuracy: 0.8450\n",
+      "625/625 [==============================] - 35s 57ms/step - loss: 0.0816 - accuracy: 0.9690 - val_loss: 0.7317 - val_accuracy: 0.8016\n",
       "Epoch 5/10\n",
-      "625/625 [==============================] - 36s 57ms/step - loss: 0.1605 - accuracy: 0.9412 - val_loss: 0.3941 - val_accuracy: 0.8476\n",
+      "625/625 [==============================] - 36s 57ms/step - loss: 0.0478 - accuracy: 0.9840 - val_loss: 0.8304 - val_accuracy: 0.8256\n",
       "Epoch 6/10\n",
-      "625/625 [==============================] - 35s 57ms/step - loss: 0.1196 - accuracy: 0.9569 - val_loss: 0.4608 - val_accuracy: 0.8614\n",
+      "625/625 [==============================] - 36s 57ms/step - loss: 0.0284 - accuracy: 0.9913 - val_loss: 0.9598 - val_accuracy: 0.8366\n",
       "Epoch 7/10\n",
-      "625/625 [==============================] - 36s 57ms/step - loss: 0.0929 - accuracy: 0.9682 - val_loss: 0.4940 - val_accuracy: 0.8442\n",
+      "625/625 [==============================] - 35s 57ms/step - loss: 0.0210 - accuracy: 0.9944 - val_loss: 0.9161 - val_accuracy: 0.8312\n",
       "Epoch 8/10\n",
-      "625/625 [==============================] - 36s 57ms/step - loss: 0.0733 - accuracy: 0.9761 - val_loss: 0.5204 - val_accuracy: 0.8444\n",
+      "625/625 [==============================] - 35s 56ms/step - loss: 0.0421 - accuracy: 0.9855 - val_loss: 0.9879 - val_accuracy: 0.8292\n",
       "Epoch 9/10\n",
-      "625/625 [==============================] - 36s 57ms/step - loss: 0.0699 - accuracy: 0.9767 - val_loss: 0.5838 - val_accuracy: 0.8198\n",
+      "625/625 [==============================] - 36s 57ms/step - loss: 0.0262 - accuracy: 0.9917 - val_loss: 0.9595 - val_accuracy: 0.8202\n",
       "Epoch 10/10\n",
-      "625/625 [==============================] - 36s 58ms/step - loss: 0.1890 - accuracy: 0.9241 - val_loss: 0.5132 - val_accuracy: 0.8360\n"
+      "625/625 [==============================] - 35s 56ms/step - loss: 0.0131 - accuracy: 0.9962 - val_loss: 1.0887 - val_accuracy: 0.8418\n"
      ]
     }
    ],
@@ -1568,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
