--- a/simplernn.ipynb
+++ b/simplernn.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Users\\agraw\\OneDrive\\Desktop\\Review_Analysis\\venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "WARNING:tensorflow:From c:\\Users\\agraw\\OneDrive\\Desktop\\GenAI-Projects\\venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
       "\n"
      ]
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        " 1)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1327,7 @@
        " ...}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1351,7 @@
        "\"? this film was just brilliant casting location scenery story direction everyone's really suited the part they played and you could just imagine being there robert ? is an amazing actor and now the same being director ? father came from the same scottish island as myself so i loved the fact there was a real connection with this film the witty remarks throughout the film were great it was just brilliant so much that i bought the film as soon as it was released for ? and would recommend it to everyone to watch and the fly fishing was amazing really cried at the end it was so sad and you know what they say if you cry at a film it must have been good and this definitely was also ? to the two little boy's that played the ? of norman and paul they were just brilliant children are often left out of the ? list i think because the stars that play them all grown up are such a big profile for the whole film but these children are amazing and should be praised for what they have done don't you think the whole story was so lovely because it was true and was someone's life after all that was shared with us all\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1378,7 @@
        "       [   0,    0,    0, ...,  204,  131,    9]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1449,7 +1449,7 @@
        "         16, 5345,   19,  178,   32])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1460,14 +1460,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Users\\agraw\\OneDrive\\Desktop\\Review_Analysis\\venv\\Lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "WARNING:tensorflow:From c:\\Users\\agraw\\OneDrive\\Desktop\\GenAI-Projects\\venv\\Lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
       "\n"
      ]
     }
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1513,14 +1513,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Users\\agraw\\OneDrive\\Desktop\\Review_Analysis\\venv\\Lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "WARNING:tensorflow:From c:\\Users\\agraw\\OneDrive\\Desktop\\GenAI-Projects\\venv\\Lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
       "\n"
      ]
     }
@@ -1531,16 +1531,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.EarlyStopping at 0x2acb6386390>"
+       "<keras.src.callbacks.EarlyStopping at 0x27441a56390>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1554,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1562,25 +1562,29 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "625/625 [==============================] - 34s 55ms/step - loss: 0.0582 - accuracy: 0.9798 - val_loss: 0.7454 - val_accuracy: 0.8158\n",
+      "WARNING:tensorflow:From c:\\Users\\agraw\\OneDrive\\Desktop\\GenAI-Projects\\venv\\Lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\agraw\\OneDrive\\Desktop\\GenAI-Projects\\venv\\Lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "625/625 [==============================] - 91s 144ms/step - loss: 27289890816.0000 - accuracy: 0.6012 - val_loss: 0.6170 - val_accuracy: 0.6516\n",
       "Epoch 2/10\n",
-      "625/625 [==============================] - 35s 56ms/step - loss: 0.0641 - accuracy: 0.9779 - val_loss: 0.7540 - val_accuracy: 0.8288\n",
+      "625/625 [==============================] - 87s 140ms/step - loss: 312.4888 - accuracy: 0.7488 - val_loss: 0.5302 - val_accuracy: 0.7300\n",
       "Epoch 3/10\n",
-      "625/625 [==============================] - 35s 57ms/step - loss: 0.0575 - accuracy: 0.9794 - val_loss: 0.7914 - val_accuracy: 0.8350\n",
+      "625/625 [==============================] - 52s 84ms/step - loss: 0.4231 - accuracy: 0.8224 - val_loss: 0.4917 - val_accuracy: 0.7600\n",
       "Epoch 4/10\n",
-      "625/625 [==============================] - 35s 57ms/step - loss: 0.0816 - accuracy: 0.9690 - val_loss: 0.7317 - val_accuracy: 0.8016\n",
+      "625/625 [==============================] - 38s 61ms/step - loss: 0.4705 - accuracy: 0.8516 - val_loss: 0.4859 - val_accuracy: 0.7680\n",
       "Epoch 5/10\n",
-      "625/625 [==============================] - 36s 57ms/step - loss: 0.0478 - accuracy: 0.9840 - val_loss: 0.8304 - val_accuracy: 0.8256\n",
+      "625/625 [==============================] - 42s 67ms/step - loss: 0.2954 - accuracy: 0.8839 - val_loss: 0.4959 - val_accuracy: 0.7852\n",
       "Epoch 6/10\n",
-      "625/625 [==============================] - 36s 57ms/step - loss: 0.0284 - accuracy: 0.9913 - val_loss: 0.9598 - val_accuracy: 0.8366\n",
+      "625/625 [==============================] - 41s 66ms/step - loss: 0.2373 - accuracy: 0.9111 - val_loss: 0.4975 - val_accuracy: 0.7870\n",
       "Epoch 7/10\n",
-      "625/625 [==============================] - 35s 57ms/step - loss: 0.0210 - accuracy: 0.9944 - val_loss: 0.9161 - val_accuracy: 0.8312\n",
+      "625/625 [==============================] - 36s 57ms/step - loss: 0.1948 - accuracy: 0.9309 - val_loss: 0.5223 - val_accuracy: 0.7920\n",
       "Epoch 8/10\n",
-      "625/625 [==============================] - 35s 56ms/step - loss: 0.0421 - accuracy: 0.9855 - val_loss: 0.9879 - val_accuracy: 0.8292\n",
+      "625/625 [==============================] - 36s 58ms/step - loss: 0.1582 - accuracy: 0.9466 - val_loss: 0.5937 - val_accuracy: 0.7914\n",
       "Epoch 9/10\n",
-      "625/625 [==============================] - 36s 57ms/step - loss: 0.0262 - accuracy: 0.9917 - val_loss: 0.9595 - val_accuracy: 0.8202\n",
+      "625/625 [==============================] - 35s 56ms/step - loss: 0.1333 - accuracy: 0.9557 - val_loss: 0.6424 - val_accuracy: 0.7914\n",
       "Epoch 10/10\n",
-      "625/625 [==============================] - 35s 56ms/step - loss: 0.0131 - accuracy: 0.9962 - val_loss: 1.0887 - val_accuracy: 0.8418\n"
+      "625/625 [==============================] - 35s 56ms/step - loss: 0.1118 - accuracy: 0.9641 - val_loss: 0.6949 - val_accuracy: 0.7960\n"
      ]
     }
    ],
@@ -1595,9 +1599,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\agraw\\OneDrive\\Desktop\\GenAI-Projects\\venv\\Lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
    "source": [
     "## Save model file\n",
     "model.save('simple_rnn_imdb.h5')"
@@ -1605,10 +1618,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.save('model2.keras')"
+   ]
   }
  ],
  "metadata": {
