--- a/simplernn.ipynb
+++ b/simplernn.ipynb
@@ -1596,21 +1596,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 59ms/step - accuracy: 0.7915 - loss: 0.4481 - val_accuracy: 0.8230 - val_loss: 0.4093\n"
+      "Epoch 1/20\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 51ms/step - accuracy: 0.8919 - loss: 0.2745 - val_accuracy: 0.8328 - val_loss: 0.3889\n",
+      "Epoch 2/20\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 50ms/step - accuracy: 0.9242 - loss: 0.2031 - val_accuracy: 0.8416 - val_loss: 0.4043\n",
+      "Epoch 3/20\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 51ms/step - accuracy: 0.9455 - loss: 0.1486 - val_accuracy: 0.8394 - val_loss: 0.4123\n",
+      "Epoch 4/20\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 52ms/step - accuracy: 0.9517 - loss: 0.1411 - val_accuracy: 0.8354 - val_loss: 0.4467\n",
+      "Epoch 5/20\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 51ms/step - accuracy: 0.9577 - loss: 0.1167 - val_accuracy: 0.8268 - val_loss: 0.4928\n",
+      "Epoch 6/20\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 51ms/step - accuracy: 0.9729 - loss: 0.0819 - val_accuracy: 0.7978 - val_loss: 0.4917\n",
+      "Epoch 7/20\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 52ms/step - accuracy: 0.9736 - loss: 0.0835 - val_accuracy: 0.8388 - val_loss: 0.5916\n",
+      "Epoch 8/20\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 52ms/step - accuracy: 0.9802 - loss: 0.0593 - val_accuracy: 0.8148 - val_loss: 0.4881\n",
+      "Epoch 9/20\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 58ms/step - accuracy: 0.9672 - loss: 0.0933 - val_accuracy: 0.8362 - val_loss: 0.6235\n",
+      "Epoch 10/20\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 54ms/step - accuracy: 0.9849 - loss: 0.0472 - val_accuracy: 0.8352 - val_loss: 0.6642\n",
+      "Epoch 11/20\n",
+      "\u001b[1m625/625\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 52ms/step - accuracy: 0.9921 - loss: 0.0301 - val_accuracy: 0.8308 - val_loss: 0.7158\n"
      ]
     }
    ],
    "source": [
     "## Train the model with early sstopping\n",
     "history=model.fit(\n",
-    "    X_train,y_train,epochs=1,batch_size=32,\n",
+    "    X_train,y_train,epochs=20,batch_size=32,\n",
     "    validation_split=0.2,\n",
     "    callbacks=[earlystopping]\n",
     ")"
@@ -1618,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
